samples/_failures_safe/1761526554_904991_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5466227f.c: In function ‘main’:
./samples/SAFE/__tmp_5466227f.c:133:9: error: expected expression at end of input
  133 |         printf("Log entry %d: ",
      |         ^~~~~~
./samples/SAFE/__tmp_5466227f.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5466227f.c:133:9: error: expected declaration or statement at end of input
